tests/paczka1/small_fuzzy/27653018.err
Error in line 6: n8XvI5bf S187 94,5
Error in line 9: n8XvI5bf A891 13,5
Error in line 12: K25w2nyAuNL S615 37,4
